# hippo_chain

./: CMakeLists.txt  package.xml
cfg/: BaseController.cfg  ChainController.cfg  ChainTarget.cfg  ChildController.cfg  GripperTarget.cfg  KalmanFilter.cfg  KalmanFilterConfig.csv  LSQConfig.csv  LeastSquares.cfg  VecicleControllerConfig.csv  VecicleControllerConfig_3.csv  VecicleControllerConfig_backup.csv  VecicleControllerConfig_experiments_1.csv  VecicleControllerConfig_latest.csv  VecicleControllerConfig_no_model.csv  VehicleController.cfg
config/controller/chain/: chain_controller_1.launch  chain_controller_2.launch  chain_controller_3.launch  chain_controller_sitl_1.launch  chain_controller_sitl_2.launch  chain_controller_sitl_3.launch
config/controller/vehicle/: child_vehicle_controller.launch  vehicle_controller.launch
config/environment/: tank.launch
config/joints/: revolute.launch  universal.launch
config/thruster/: hippocampus.launch  hippocampus_single_thruster.launch
config/vehicle/: hippocampus.launch
include/chain_controller/: ChainController.h
include/chain_controller/input_provider/: InputProvider.h
include/chain_controller/joint_model/: JointModel.h  JointModel1d.h  RevoluteJointModel.h  UniversalJointModel.h
include/chain_controller/least_squares_solver/: LQPSolver.h  LeastSquaresSolver.h  MatlabLSQSolver.h  MatlabLSQSolver2.h
include/chain_controller/state/: StateProvider.h
include/chain_controller/thruster_model/: ThrusterModel.h
include/chain_controller/vehicle_controller/: BaseVehicleController.h  (+3 more)
include/chain_estimator/: ChainEstimator.h
include/chain_planner/: ChainPlanner.h  Targed4d.h  VisualPose.h
include/chain_watcher/: Boundaries.h  ChainWatcher.h  VehicleWatcher.h
include/common/: ChainNodeTemplate.h  ConfigProvider.h  CustomExceptions.h  Debugger.h  DynamicReconfigureManager.h  defines.h  sharedAlgorithms.hpp  typedefs.h
include/utils/: CustomExceptions.h  sharedAlgorithms.hpp  typedefs.h
launch/: chain.launch  gripper.launch  record.launch  test.launch  watcher.launch
lib/matlab_lsq_solver/: LSQSolver.cpp  LSQSolver.h  PresolveWorkingSet.cpp  PresolveWorkingSet.h  RemoveDependentEq_.cpp  RemoveDependentEq_.h  RemoveDependentIneq_.cpp  RemoveDependentIneq_.h  addBoundToActiveSetMatrix_.cpp  addBoundToActiveSetMatrix_.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  computeFirstOrderOpt.cpp  computeFirstOrderOpt.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  computeFval_ReuseHx.h  computeGrad_StoreHx.cpp  computeGrad_StoreHx.h  computeQ_.cpp  computeQ_.h  compute_deltax.cpp  compute_deltax.h  countsort.cpp  countsort.h  deleteColMoveEnd.cpp  deleteColMoveEnd.h  driver.cpp  driver.h  factorQR.cpp  factorQR.h  factorQRE.cpp  factorQRE.h  feasibleX0ForWorkingSet.cpp  feasibleX0ForWorkingSet.h  feasibleratiotest.cpp  feasibleratiotest.h  (+45 more)
msg/: ChainState.msg  ChainVehicleState.msg  Error.msg
nodes/: hippo_chain_gripper_target_publisher
src/: chainController.cpp  controller.cpp  estimator.cpp  planner.cpp  watcher.cpp
srv/: AddVehicles.srv  FixBase.srv
(+126 files in other folders)
